# tex-based-diary-generator

./: .gitignore  README.md  pyproject.toml  run.sh  tasks.py
.github/workflows/: pytest.yaml  test.yaml
src/: diary_generator.py  file_ext_converter.py  path_resolver.py  prune_unused_files.py
template/: draft.tex  list-bodies.tex  template_body.tex
template/style/: definition.sty  packages.sty  revision.sty  spacing.sty
tests/: test_diary_generator.py  test_file_ext_converter.py  test_prune_unused_files.py
tests/test_resources/: body_false_only_extra_line.tex  body_false_written_texts.tex
